Make the dialogs modal and use a simpler method to set the config pages' title. This commit also makes the editting of accounts a resposibility of the kcm module instead of doing that in the item itself.

The sideeffect of this commit is that it also fixes the account list not being
refreshed sometimes.
BUG: 252053

svn path=/trunk/playground/network/telepathy-accounts-kcm/; revision=1178681