KTp/Models/accounts-list-model.h
@@ -40,8 +40,8 @@ public:
     virtual Qt::ItemFlags flags(const QModelIndex &index) const;
     virtual bool setData(const QModelIndex &index, const QVariant &value, int role);
     void addAccount(const Tp::AccountPtr &account);
-    void editAccount(const QModelIndex &index);
     void removeAccount(const QModelIndex &index);
+    AccountItem* itemForIndex(const QModelIndex &index);
 
 Q_SIGNALS:
 	void protocolSelected(QString, QString);
