src/edit-account-dialog.h
@@ -35,12 +35,6 @@ public:
     explicit EditAccountDialog(AccountItem *item, QWidget *parent = 0);
     virtual ~EditAccountDialog();
 
-Q_SIGNALS:
-	void protocolSelected(QString, QString);
-
-public Q_SLOTS:
-	void onTitleForCustomPages(QString, QList<QString>);
-	void show();
 
 protected Q_SLOTS:
     virtual void slotButtonClicked(int button);
@@ -51,6 +45,7 @@ private Q_SLOTS:
 private:
     Q_DISABLE_COPY(EditAccountDialog);
 
+    void loadPages();
     void accept();
 
     class Private;
