src/kcm-telepathy-accounts.h
@@ -44,8 +44,6 @@ public:
                                   const QVariantList& args = QVariantList());
     virtual ~KCMTelepathyAccounts();
 
-Q_SIGNALS:
-	void setTitleForCustomPages(QString mandatoryPage, QList<QString> optionalPage);
 
 public Q_SLOTS:
     virtual void load();
@@ -58,8 +56,6 @@ private Q_SLOTS:
     void onAddAccountClicked();
     void onEditAccountClicked();
     void onRemoveAccountClicked();
-    void onAddAccountAssistantClosed();
-	void onProtocolSelected(QString protocol, QString localizedName);
 
 private:
     Tp::AccountManagerPtr m_accountManager;
